sg-890 - fix spacing between service sections for mobile

--- a/web/themes/custom/sfgovpl/src/sass/paragraphs/_paragraph-services.scss
+++ b/web/themes/custom/sfgovpl/src/sass/paragraphs/_paragraph-services.scss
@@ -42,6 +42,9 @@
     @include fs-big-description;
   }
   .sfgov-services-section {
-    margin-bottom: 60px;
+    margin-bottom: 40px;
+    @include media($medium-screen) {
+      margin-bottom: 60px;
+    }
   }
 }
